--- a/run_models.ipynb
+++ b/run_models.ipynb
@@ -37,7 +37,7 @@
     "import os\n",
     "import sys\n",
     "import matplotlib\n",
-    "matplotlib.use('Agg')\n",
+    "matplotlib.use('TkAgg')\n",
     "import matplotlib.pyplot\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
